--- a/mmall2/src/main/resources.dev/datasource.properties
+++ b/mmall2/src/main/resources.dev/datasource.properties
@@ -2,11 +2,9 @@ db.driverLocation=/Users/imooc/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
 
 #db.url=jdbc:mysql://192.1.1.1:3306/mmall?characterEncoding=utf-8
-#db.url=jdbc:mysql://localhost:3306/mmall?characterEncoding=utf-8
-
 db.url=jdbc:mysql://localhost:3306/mmall?characterEncoding=utf-8
-db.username=mmall
-db.password=mmallmysqlpassword
+db.username=root
+db.password=love889080
 
 
 db.initialSize = 20
@@ -16,4 +14,3 @@ db.minIdle = 10
 db.maxWait = 10
 db.defaultAutoCommit = true
 db.minEvictableIdleTimeMillis = 3600000
-
