--- a/MyHappyMall/src/main/resources/datasource.properties
+++ b/MyHappyMall/src/main/resources/datasource.properties
@@ -1,4 +1,4 @@
-db.driverLocation=/Users/imooc/mysql-connector-java-5.1.6-bin.jar
+db.driverLocation=/Users/qianjiapeng/Desktop/Me/\u5B66\u4E60/git\u7248\u672C\u63A8\u9001\u4ED3\u5E93/MyHappyMall/src/main/tools/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
 
 #db.url=jdbc:mysql://192.1.1.1:3306/mmall?characterEncoding=utf-8
